networking/scenarios/01-pod-to-pod-communication.yaml
apiVersion: v1
kind: Pod
metadata:
  name: client-pod
  labels:
    app: client
spec:
  containers:
  - name: client
    image: busybox
    command: ["sleep", "3600"]
---
apiVersion: v1
kind: Pod
metadata:
  name: server-pod
  labels:
    app: server
spec:
  containers:
  - name: server
    image: nginx:alpine
    ports:
    - containerPort: 80
